bazel_all_fixes